# experiments

./: .gitignore  .gitmodules  LICENSE  Test.hs  Trace.hs  bmarks  cabal.project  experiments.cabal  todo
0#experiments/: Partitions.hs  Tensor.hs  complexes  graph-h-3-2.dot
Math/: Combinatorics.hs  Module.hs  MonoidAlgebra.hs  Representations.hs  TrigPoly.hs  TypeNats.hs  Weyl.hs
Numeric/: Orphans.hs  Wrapped.hs
mathutils/Math/: Combinatorics.hs  Partitions.hs  TypeNats.hs
methods/index/Math/Trace/O/: Index.hs
methods/trace-conjencture/Math/Trace/O/: Conjecture.hs
methods/trace-known/Math/Trace/O/: Known.hs
methods/trace-stolz/Math/Trace/O/: Stolz.hs
signatures/trace/Math/Trace/: Method.hsig
tests/: Test.hs
tests/Props/: Consistent.hs
