cabal-version:       2.4
name:                experiments
version:             0.1.0.0
synopsis:            Moments of Random Traces over Classical Lie groups
description:         Various methods to compute the higher moments of a random
                     trace over classical compact Lie groups
bug-reports:         mailto:gesh@gesh.uni.cx
license:             MIT
license-file:        LICENSE
author:              Gesh
maintainer:          gesh@gesh.uni.cx
copyright:           2020 Gesh

library mathutils
  exposed-modules:  Math.Combinatorics, Math.Partitions, Math.TypeNats
  build-depends:    base ^>=4.13.0.0,
                    combinat,
                    vector-sized, finite-typelits,
                    ghc-typelits-natnormalise, ghc-typelits-knownnat,
                    constraints, reflection
  hs-source-dirs:   mathutils
  default-language: Haskell2010
  ghc-options:      -Wall

library trace-computation-sig
  signatures:       Math.Trace.Method
  build-depends:    base, combinat
  hs-source-dirs:   signatures/trace
  default-language: Haskell2010
  ghc-options:      -Wall

library trace-index
  exposed-modules:  Math.Trace.O.Index
  build-depends:    base, combinat,
                    trace-computation-sig,
                    trace-stolz, trace-conjecture, trace-known
  mixins:           trace-computation-sig requires (Math.Trace.Method as Math.Trace.O.Stolz),
                    trace-computation-sig requires (Math.Trace.Method as Math.Trace.O.Conjecture),
                    trace-computation-sig requires (Math.Trace.Method as Math.Trace.O.Known)
  hs-source-dirs:   methods/index
  default-language: Haskell2010
  ghc-options:      -Wall

library trace-stolz
  exposed-modules:  Math.Trace.O.Stolz
  build-depends:    base ^>=4.13.0.0, combinat, mathutils
  hs-source-dirs:   methods/trace-stolz
  default-language: Haskell2010
  ghc-options:      -Wall

library trace-conjecture
  exposed-modules:  Math.Trace.O.Conjecture
  build-depends:    base, combinat, mathutils
  hs-source-dirs:   methods/trace-conjencture
  default-language: Haskell2010
  ghc-options:      -Wall

library trace-known
  exposed-modules:  Math.Trace.O.Known
  build-depends:    base, combinat, mathutils
  hs-source-dirs:   methods/trace-known
  default-language: Haskell2010
  ghc-options:      -Wall

test-suite trace-methods
  type:             detailed-0.9
  test-module:      Test
  other-modules:    Props.Consistent
  build-depends:    base ^>=4.13.0.0, combinat,
                    QuickCheck, Cabal, cabal-test-quickcheck,
                    trace-index
  hs-source-dirs:   tests
  default-language: Haskell2010
  ghc-options:      -Wall
